# DOOM

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  TODOLIST.txt
DOOM/: CMakeLists.txt  DOOM.h  doomdef.h  main.cpp
DOOM/DisplayManager/: DisplayManager.cpp  DisplayManager.h
DOOM/Enemy/: Enemy.cpp  Enemy.h  EnemyStates.h  Soldier.cpp  Soldier.h
DOOM/Engine/: DoomEngine.cpp  DoomEngine.h  RenderTypes.h  Renderer.cpp  Renderer.h
DOOM/Game/: Game.cpp  Game.h  GameStates.h
DOOM/HUD/: HUD.cpp  HUD.h
DOOM/MainMenu/: menu.cpp  menu.h
DOOM/Misc/: Angle.cpp  Angle.h  Geometry.cpp  Geometry.h
DOOM/Patch/: AssetsManager.cpp  AssetsManager.h  Patch.cpp  Patch.h
DOOM/PatchesTextures/: AssetsManager.cpp  AssetsManager.h  Flat.cpp  Flat.h  Patch.cpp  Patch.h  Texture.cpp  Texture.h
DOOM/PauseMenu/: PauseMenu.cpp  PauseMenu.h
DOOM/Player/: Player.cpp  Player.h
DOOM/WAD/: DataTypes.h  wad_loader.cpp  wad_loader.h  wad_reader.cpp  wad_reader.h
DOOM/maps/: map.cpp  map.h  map_types.h
